// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar navigation collapses successfully at nested level 1`] = `
<DocumentFragment>
  .emotion-21 {
  font-family: "Noto Sans",sans-serif;
  font-size: 18px;
  line-height: 1.5555555555555556;
  font-weight: 400;
  -webkit-letter-spacing: -0.25px;
  -moz-letter-spacing: -0.25px;
  -ms-letter-spacing: -0.25px;
  letter-spacing: -0.25px;
  list-style-type: none;
  margin: 0;
}

.emotion-18 {
  list-style-type: none;
  margin: 0px;
  padding: 0;
}

.emotion-2 {
  list-style-type: none;
  margin: 0px;
  padding: 0 4px;
}

.emotion-2 .emotion-2,
.emotion-2 .emotion-2 .emotion-2 {
  padding-right: 0;
}

.emotion-1 {
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  -webkit-letter-spacing: -0.25px;
  -moz-letter-spacing: -0.25px;
  -ms-letter-spacing: -0.25px;
  letter-spacing: -0.25px;
  line-height: 1.5rem;
  background-color: transparent;
  box-sizing: border-box;
  color: #777777;
  cursor: pointer;
  font-weight: normal;
  min-height: 40px;
  padding-left: 12px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-right: 24px;
  border-radius: 8px;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-1:hover {
  color: #535353;
  background-color: #e6f4ff;
}

.emotion-1:focus {
  outline: none;
  color: #ffffff;
  background-color: #0a68c1;
}

.emotion-1:focus svg polygon {
  fill: #ffffff;
}

.emotion-1 a {
  color: #0a0a0a;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: normal;
  width: 100%;
  height: 100%;
}

.emotion-1 a:visited {
  color: #0a0a0a;
}

.emotion-0 {
  fill: #535353;
  color: #535353;
  width: 16px;
  height: 16px;
  float: right;
}

.emotion-8 {
  display: inline-block;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  color: #2F75D7;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-8 svg {
  fill: #2F75D7;
  color: #2F75D7;
}

.emotion-8:hover:not(:disabled) {
  color: #2F75D7;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-8:hover:not(:disabled) svg {
  fill: #2F75D7;
  color: #2F75D7;
}

.emotion-8:active:not(:disabled) {
  color: #2F75D7;
}

.emotion-8:active:not(:disabled) svg {
  fill: #2F75D7;
  color: #2F75D7;
}

.emotion-8:visited:not(:disabled) {
  color: #2F75D7;
}

.emotion-8:visited:not(:disabled) svg {
  fill: #2F75D7;
  color: #2F75D7;
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-8 {
    vertical-align: text-bottom;
  }
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
  margin-top: calc(-4px/2);
  margin-bottom: calc(-4px/2);
}

.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
  margin-top: calc(4px/2);
  margin-bottom: calc(4px/2);
}

<nav
    aria-label="Sidebar"
    class="emotion-21"
    role="navigation"
  >
    <ul
      class="emotion-18"
      role="list"
    >
      <li
        class="emotion-2"
      >
        <div
          class="emotion-1"
          data-testid="/group1"
          tabindex="0"
        >
          Group 1
          <svg
            aria-labelledby="mock-bui-1"
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title
              id="mock-bui-1"
            >
              close icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 10 12 15 17 10"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 10 12 15 17 10"
              />
            </g>
          </svg>
        </div>
      </li>
      <li
        class="emotion-2"
      >
        <div
          class="emotion-1"
          data-testid="/group2"
          tabindex="0"
        >
          Group 2
          <svg
            aria-labelledby="mock-bui-1"
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title
              id="mock-bui-1"
            >
              open icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 14 12 9 17 14"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 14 12 9 17 14"
              />
            </g>
          </svg>
        </div>
        <ul
          class="emotion-18"
          role="list"
        >
          <li
            class="emotion-2"
          >
            <a
              class="emotion-8"
              href="/group2/page1"
            >
              <span
                class="emotion-7"
              >
                <span
                  class="emotion-6"
                >
                  <div
                    class="emotion-1"
                    data-testid="/group2/page1"
                    tabindex="-1"
                  >
                    Group 2 Page 1
                  </div>
                </span>
              </span>
            </a>
          </li>
          <li
            class="emotion-2"
          >
            <a
              class="emotion-8"
              href="/group2/page2"
            >
              <span
                class="emotion-7"
              >
                <span
                  class="emotion-6"
                >
                  <div
                    class="emotion-1"
                    data-testid="/group2/page2"
                    tabindex="-1"
                  >
                    Group 2 Page 2
                  </div>
                </span>
              </span>
            </a>
          </li>
          <li
            class="emotion-2"
          >
            <div
              class="emotion-1"
              data-testid="/group2/group2b"
              tabindex="0"
            >
              Group 2b
              <svg
                aria-labelledby="mock-bui-1"
                class="emotion-0"
                viewBox="0 0 16 16"
              >
                <title
                  id="mock-bui-1"
                >
                  close icon
                </title>
                <g
                  fill="none"
                >
                  <mask
                    fill="white"
                  >
                    <polygon
                      points="7 10 12 15 17 10"
                    />
                  </mask>
                  <polygon
                    fill="#666"
                    points="7 10 12 15 17 10"
                  />
                </g>
              </svg>
            </div>
          </li>
        </ul>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Sidebar navigation on group 1 page after click group1 menu collapses 1`] = `
<DocumentFragment>
  .emotion-7 {
  font-family: "Noto Sans",sans-serif;
  font-size: 18px;
  line-height: 1.5555555555555556;
  font-weight: 400;
  -webkit-letter-spacing: -0.25px;
  -moz-letter-spacing: -0.25px;
  -ms-letter-spacing: -0.25px;
  letter-spacing: -0.25px;
  list-style-type: none;
  margin: 0;
}

.emotion-6 {
  list-style-type: none;
  margin: 0px;
  padding: 0;
}

.emotion-2 {
  list-style-type: none;
  margin: 0px;
  padding: 0 4px;
}

.emotion-2 .emotion-2,
.emotion-2 .emotion-2 .emotion-2 {
  padding-right: 0;
}

.emotion-1 {
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  -webkit-letter-spacing: -0.25px;
  -moz-letter-spacing: -0.25px;
  -ms-letter-spacing: -0.25px;
  letter-spacing: -0.25px;
  line-height: 1.5rem;
  background-color: transparent;
  box-sizing: border-box;
  color: #777777;
  cursor: pointer;
  font-weight: normal;
  min-height: 40px;
  padding-left: 12px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-right: 24px;
  border-radius: 8px;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-1:hover {
  color: #535353;
  background-color: #e6f4ff;
}

.emotion-1:focus {
  outline: none;
  color: #ffffff;
  background-color: #0a68c1;
}

.emotion-1:focus svg polygon {
  fill: #ffffff;
}

.emotion-1 a {
  color: #0a0a0a;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: normal;
  width: 100%;
  height: 100%;
}

.emotion-1 a:visited {
  color: #0a0a0a;
}

.emotion-0 {
  fill: #535353;
  color: #535353;
  width: 16px;
  height: 16px;
  float: right;
}

<nav
    aria-label="Sidebar"
    class="emotion-7"
    role="navigation"
  >
    <ul
      class="emotion-6"
      role="list"
    >
      <li
        class="emotion-2"
      >
        <div
          class="emotion-1"
          data-testid="/group1"
          tabindex="0"
        >
          Group 1
          <svg
            aria-labelledby="mock-bui-1"
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title
              id="mock-bui-1"
            >
              close icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 10 12 15 17 10"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 10 12 15 17 10"
              />
            </g>
          </svg>
        </div>
      </li>
      <li
        class="emotion-2"
      >
        <div
          class="emotion-1"
          data-testid="/group2"
          tabindex="0"
        >
          Group 2
          <svg
            aria-labelledby="mock-bui-1"
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title
              id="mock-bui-1"
            >
              close icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 10 12 15 17 10"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 10 12 15 17 10"
              />
            </g>
          </svg>
        </div>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Sidebar navigation on group 1 page after enter key group1 menu collapses 1`] = `
<DocumentFragment>
  .emotion-7 {
  font-family: "Noto Sans",sans-serif;
  font-size: 18px;
  line-height: 1.5555555555555556;
  font-weight: 400;
  -webkit-letter-spacing: -0.25px;
  -moz-letter-spacing: -0.25px;
  -ms-letter-spacing: -0.25px;
  letter-spacing: -0.25px;
  list-style-type: none;
  margin: 0;
}

.emotion-6 {
  list-style-type: none;
  margin: 0px;
  padding: 0;
}

.emotion-2 {
  list-style-type: none;
  margin: 0px;
  padding: 0 4px;
}

.emotion-2 .emotion-2,
.emotion-2 .emotion-2 .emotion-2 {
  padding-right: 0;
}

.emotion-1 {
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  -webkit-letter-spacing: -0.25px;
  -moz-letter-spacing: -0.25px;
  -ms-letter-spacing: -0.25px;
  letter-spacing: -0.25px;
  line-height: 1.5rem;
  background-color: transparent;
  box-sizing: border-box;
  color: #777777;
  cursor: pointer;
  font-weight: normal;
  min-height: 40px;
  padding-left: 12px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-right: 24px;
  border-radius: 8px;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-1:hover {
  color: #535353;
  background-color: #e6f4ff;
}

.emotion-1:focus {
  outline: none;
  color: #ffffff;
  background-color: #0a68c1;
}

.emotion-1:focus svg polygon {
  fill: #ffffff;
}

.emotion-1 a {
  color: #0a0a0a;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: normal;
  width: 100%;
  height: 100%;
}

.emotion-1 a:visited {
  color: #0a0a0a;
}

.emotion-0 {
  fill: #535353;
  color: #535353;
  width: 16px;
  height: 16px;
  float: right;
}

<nav
    aria-label="Sidebar"
    class="emotion-7"
    role="navigation"
  >
    <ul
      class="emotion-6"
      role="list"
    >
      <li
        class="emotion-2"
      >
        <div
          class="emotion-1"
          data-testid="/group1"
          tabindex="0"
        >
          Group 1
          <svg
            aria-labelledby="mock-bui-1"
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title
              id="mock-bui-1"
            >
              close icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 10 12 15 17 10"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 10 12 15 17 10"
              />
            </g>
          </svg>
        </div>
      </li>
      <li
        class="emotion-2"
      >
        <div
          class="emotion-1"
          data-testid="/group2"
          tabindex="0"
        >
          Group 2
          <svg
            aria-labelledby="mock-bui-1"
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title
              id="mock-bui-1"
            >
              close icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 10 12 15 17 10"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 10 12 15 17 10"
              />
            </g>
          </svg>
        </div>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Sidebar navigation on group 1 page by clicking on components menu, group1 menu collapses and group2 menu expands 1`] = `
<DocumentFragment>
  .emotion-21 {
  font-family: "Noto Sans",sans-serif;
  font-size: 18px;
  line-height: 1.5555555555555556;
  font-weight: 400;
  -webkit-letter-spacing: -0.25px;
  -moz-letter-spacing: -0.25px;
  -ms-letter-spacing: -0.25px;
  letter-spacing: -0.25px;
  list-style-type: none;
  margin: 0;
}

.emotion-18 {
  list-style-type: none;
  margin: 0px;
  padding: 0;
}

.emotion-2 {
  list-style-type: none;
  margin: 0px;
  padding: 0 4px;
}

.emotion-2 .emotion-2,
.emotion-2 .emotion-2 .emotion-2 {
  padding-right: 0;
}

.emotion-1 {
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  -webkit-letter-spacing: -0.25px;
  -moz-letter-spacing: -0.25px;
  -ms-letter-spacing: -0.25px;
  letter-spacing: -0.25px;
  line-height: 1.5rem;
  background-color: transparent;
  box-sizing: border-box;
  color: #777777;
  cursor: pointer;
  font-weight: normal;
  min-height: 40px;
  padding-left: 12px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-right: 24px;
  border-radius: 8px;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-1:hover {
  color: #535353;
  background-color: #e6f4ff;
}

.emotion-1:focus {
  outline: none;
  color: #ffffff;
  background-color: #0a68c1;
}

.emotion-1:focus svg polygon {
  fill: #ffffff;
}

.emotion-1 a {
  color: #0a0a0a;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: normal;
  width: 100%;
  height: 100%;
}

.emotion-1 a:visited {
  color: #0a0a0a;
}

.emotion-0 {
  fill: #535353;
  color: #535353;
  width: 16px;
  height: 16px;
  float: right;
}

.emotion-8 {
  display: inline-block;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  color: #2F75D7;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-8 svg {
  fill: #2F75D7;
  color: #2F75D7;
}

.emotion-8:hover:not(:disabled) {
  color: #2F75D7;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-8:hover:not(:disabled) svg {
  fill: #2F75D7;
  color: #2F75D7;
}

.emotion-8:active:not(:disabled) {
  color: #2F75D7;
}

.emotion-8:active:not(:disabled) svg {
  fill: #2F75D7;
  color: #2F75D7;
}

.emotion-8:visited:not(:disabled) {
  color: #2F75D7;
}

.emotion-8:visited:not(:disabled) svg {
  fill: #2F75D7;
  color: #2F75D7;
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-8 {
    vertical-align: text-bottom;
  }
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
  margin-top: calc(-4px/2);
  margin-bottom: calc(-4px/2);
}

.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
  margin-top: calc(4px/2);
  margin-bottom: calc(4px/2);
}

.emotion-4 {
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  -webkit-letter-spacing: -0.25px;
  -moz-letter-spacing: -0.25px;
  -ms-letter-spacing: -0.25px;
  letter-spacing: -0.25px;
  line-height: 1.5rem;
  background-color: transparent;
  box-sizing: border-box;
  color: #0a68c1;
  cursor: pointer;
  font-weight: normal;
  min-height: 40px;
  padding-left: 12px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-right: 24px;
  border-radius: 8px;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-4:hover {
  color: #535353;
  background-color: #e6f4ff;
}

.emotion-4:focus {
  outline: none;
  color: #ffffff;
  background-color: #0a68c1;
}

.emotion-4:focus svg polygon {
  fill: #ffffff;
}

.emotion-4 a {
  color: #0a0a0a;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: normal;
  width: 100%;
  height: 100%;
}

.emotion-4 a:visited {
  color: #0a0a0a;
}

<nav
    aria-label="Sidebar"
    class="emotion-21"
    role="navigation"
  >
    <ul
      class="emotion-18"
      role="list"
    >
      <li
        class="emotion-2"
      >
        <div
          class="emotion-1"
          data-testid="/group1"
          tabindex="0"
        >
          Group 1
          <svg
            aria-labelledby="mock-bui-1"
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title
              id="mock-bui-1"
            >
              close icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 10 12 15 17 10"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 10 12 15 17 10"
              />
            </g>
          </svg>
        </div>
      </li>
      <li
        class="emotion-2"
      >
        <div
          class="emotion-4"
          data-testid="/group2"
          tabindex="0"
        >
          Group 2
          <svg
            aria-labelledby="mock-bui-1"
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title
              id="mock-bui-1"
            >
              open icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 14 12 9 17 14"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 14 12 9 17 14"
              />
            </g>
          </svg>
        </div>
        <ul
          class="emotion-18"
          role="list"
        >
          <li
            class="emotion-2"
          >
            <a
              class="emotion-8"
              href="/group2/page1"
            >
              <span
                class="emotion-7"
              >
                <span
                  class="emotion-6"
                >
                  <div
                    class="emotion-1"
                    data-testid="/group2/page1"
                    tabindex="-1"
                  >
                    Group 2 Page 1
                  </div>
                </span>
              </span>
            </a>
          </li>
          <li
            class="emotion-2"
          >
            <a
              class="emotion-8"
              href="/group2/page2"
            >
              <span
                class="emotion-7"
              >
                <span
                  class="emotion-6"
                >
                  <div
                    class="emotion-1"
                    data-testid="/group2/page2"
                    tabindex="-1"
                  >
                    Group 2 Page 2
                  </div>
                </span>
              </span>
            </a>
          </li>
          <li
            class="emotion-2"
          >
            <div
              class="emotion-1"
              data-testid="/group2/group2b"
              tabindex="0"
            >
              Group 2b
              <svg
                aria-labelledby="mock-bui-1"
                class="emotion-0"
                viewBox="0 0 16 16"
              >
                <title
                  id="mock-bui-1"
                >
                  close icon
                </title>
                <g
                  fill="none"
                >
                  <mask
                    fill="white"
                  >
                    <polygon
                      points="7 10 12 15 17 10"
                    />
                  </mask>
                  <polygon
                    fill="#666"
                    points="7 10 12 15 17 10"
                  />
                </g>
              </svg>
            </div>
          </li>
        </ul>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Sidebar navigation on group 1 page renders as expected 1`] = `
<DocumentFragment>
  .emotion-13 {
  font-family: "Noto Sans",sans-serif;
  font-size: 18px;
  line-height: 1.5555555555555556;
  font-weight: 400;
  -webkit-letter-spacing: -0.25px;
  -moz-letter-spacing: -0.25px;
  -ms-letter-spacing: -0.25px;
  letter-spacing: -0.25px;
  list-style-type: none;
  margin: 0;
}

.emotion-7 {
  list-style-type: none;
  margin: 0px;
  padding: 0;
}

.emotion-6 {
  list-style-type: none;
  margin: 0px;
  padding: 0 4px;
}

.emotion-6 .emotion-6,
.emotion-6 .emotion-6 .emotion-6 {
  padding-right: 0;
}

.emotion-1 {
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  -webkit-letter-spacing: -0.25px;
  -moz-letter-spacing: -0.25px;
  -ms-letter-spacing: -0.25px;
  letter-spacing: -0.25px;
  line-height: 1.5rem;
  background-color: transparent;
  box-sizing: border-box;
  color: #777777;
  cursor: pointer;
  font-weight: normal;
  min-height: 40px;
  padding-left: 12px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-right: 24px;
  border-radius: 8px;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-1:hover {
  color: #535353;
  background-color: #e6f4ff;
}

.emotion-1:focus {
  outline: none;
  color: #ffffff;
  background-color: #0a68c1;
}

.emotion-1:focus svg polygon {
  fill: #ffffff;
}

.emotion-1 a {
  color: #0a0a0a;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: normal;
  width: 100%;
  height: 100%;
}

.emotion-1 a:visited {
  color: #0a0a0a;
}

.emotion-0 {
  fill: #535353;
  color: #535353;
  width: 16px;
  height: 16px;
  float: right;
}

.emotion-5 {
  display: inline-block;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  color: #2F75D7;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5 svg {
  fill: #2F75D7;
  color: #2F75D7;
}

.emotion-5:hover:not(:disabled) {
  color: #2F75D7;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-5:hover:not(:disabled) svg {
  fill: #2F75D7;
  color: #2F75D7;
}

.emotion-5:active:not(:disabled) {
  color: #2F75D7;
}

.emotion-5:active:not(:disabled) svg {
  fill: #2F75D7;
  color: #2F75D7;
}

.emotion-5:visited:not(:disabled) {
  color: #2F75D7;
}

.emotion-5:visited:not(:disabled) svg {
  fill: #2F75D7;
  color: #2F75D7;
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-5 {
    vertical-align: text-bottom;
  }
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
  margin-top: calc(-4px/2);
  margin-bottom: calc(-4px/2);
}

.emotion-3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
  margin-top: calc(4px/2);
  margin-bottom: calc(4px/2);
}

.emotion-2 {
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  -webkit-letter-spacing: -0.25px;
  -moz-letter-spacing: -0.25px;
  -ms-letter-spacing: -0.25px;
  letter-spacing: -0.25px;
  line-height: 1.5rem;
  background-color: transparent;
  box-sizing: border-box;
  color: #0a68c1;
  cursor: pointer;
  font-weight: normal;
  min-height: 40px;
  padding-left: 12px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-right: 24px;
  border-radius: 8px;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-2:hover {
  color: #535353;
  background-color: #e6f4ff;
}

.emotion-2:focus {
  outline: none;
  color: #ffffff;
  background-color: #0a68c1;
}

.emotion-2:focus svg polygon {
  fill: #ffffff;
}

.emotion-2 a {
  color: #0a0a0a;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: normal;
  width: 100%;
  height: 100%;
}

.emotion-2 a:visited {
  color: #0a0a0a;
}

<nav
    aria-label="Sidebar"
    class="emotion-13"
    role="navigation"
  >
    <ul
      class="emotion-7"
      role="list"
    >
      <li
        class="emotion-6"
      >
        <div
          class="emotion-1"
          data-testid="/group1"
          tabindex="0"
        >
          Group 1
          <svg
            aria-labelledby="mock-bui-1"
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title
              id="mock-bui-1"
            >
              open icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 14 12 9 17 14"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 14 12 9 17 14"
              />
            </g>
          </svg>
        </div>
        <ul
          class="emotion-7"
          role="list"
        >
          <li
            class="emotion-6"
          >
            <a
              class="emotion-5"
              href="/group1/page1"
            >
              <span
                class="emotion-4"
              >
                <span
                  class="emotion-3"
                >
                  <div
                    class="emotion-2"
                    data-testid="/group1/page1"
                    tabindex="-1"
                  >
                    Group 1 Page 1
                  </div>
                </span>
              </span>
            </a>
          </li>
        </ul>
      </li>
      <li
        class="emotion-6"
      >
        <div
          class="emotion-1"
          data-testid="/group2"
          tabindex="0"
        >
          Group 2
          <svg
            aria-labelledby="mock-bui-1"
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title
              id="mock-bui-1"
            >
              close icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 10 12 15 17 10"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 10 12 15 17 10"
              />
            </g>
          </svg>
        </div>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Sidebar navigation on route level renders as expected 1`] = `
<DocumentFragment>
  .emotion-7 {
  font-family: "Noto Sans",sans-serif;
  font-size: 18px;
  line-height: 1.5555555555555556;
  font-weight: 400;
  -webkit-letter-spacing: -0.25px;
  -moz-letter-spacing: -0.25px;
  -ms-letter-spacing: -0.25px;
  letter-spacing: -0.25px;
  list-style-type: none;
  margin: 0;
}

.emotion-6 {
  list-style-type: none;
  margin: 0px;
  padding: 0;
}

.emotion-2 {
  list-style-type: none;
  margin: 0px;
  padding: 0 4px;
}

.emotion-2 .emotion-2,
.emotion-2 .emotion-2 .emotion-2 {
  padding-right: 0;
}

.emotion-1 {
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  -webkit-letter-spacing: -0.25px;
  -moz-letter-spacing: -0.25px;
  -ms-letter-spacing: -0.25px;
  letter-spacing: -0.25px;
  line-height: 1.5rem;
  background-color: transparent;
  box-sizing: border-box;
  color: #777777;
  cursor: pointer;
  font-weight: normal;
  min-height: 40px;
  padding-left: 12px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-right: 24px;
  border-radius: 8px;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-1:hover {
  color: #535353;
  background-color: #e6f4ff;
}

.emotion-1:focus {
  outline: none;
  color: #ffffff;
  background-color: #0a68c1;
}

.emotion-1:focus svg polygon {
  fill: #ffffff;
}

.emotion-1 a {
  color: #0a0a0a;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: normal;
  width: 100%;
  height: 100%;
}

.emotion-1 a:visited {
  color: #0a0a0a;
}

.emotion-0 {
  fill: #535353;
  color: #535353;
  width: 16px;
  height: 16px;
  float: right;
}

<nav
    aria-label="Sidebar"
    class="emotion-7"
    role="navigation"
  >
    <ul
      class="emotion-6"
      role="list"
    >
      <li
        class="emotion-2"
      >
        <div
          class="emotion-1"
          data-testid="/group1"
          tabindex="0"
        >
          Group 1
          <svg
            aria-labelledby="mock-bui-1"
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title
              id="mock-bui-1"
            >
              close icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 10 12 15 17 10"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 10 12 15 17 10"
              />
            </g>
          </svg>
        </div>
      </li>
      <li
        class="emotion-2"
      >
        <div
          class="emotion-1"
          data-testid="/group2"
          tabindex="0"
        >
          Group 2
          <svg
            aria-labelledby="mock-bui-1"
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title
              id="mock-bui-1"
            >
              close icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 10 12 15 17 10"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 10 12 15 17 10"
              />
            </g>
          </svg>
        </div>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Sidebar navigation on route level renders correctly without given path 1`] = `
<DocumentFragment>
  .emotion-7 {
  font-family: "Noto Sans",sans-serif;
  font-size: 18px;
  line-height: 1.5555555555555556;
  font-weight: 400;
  -webkit-letter-spacing: -0.25px;
  -moz-letter-spacing: -0.25px;
  -ms-letter-spacing: -0.25px;
  letter-spacing: -0.25px;
  list-style-type: none;
  margin: 0;
}

.emotion-6 {
  list-style-type: none;
  margin: 0px;
  padding: 0;
}

.emotion-2 {
  list-style-type: none;
  margin: 0px;
  padding: 0 4px;
}

.emotion-2 .emotion-2,
.emotion-2 .emotion-2 .emotion-2 {
  padding-right: 0;
}

.emotion-1 {
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  -webkit-letter-spacing: -0.25px;
  -moz-letter-spacing: -0.25px;
  -ms-letter-spacing: -0.25px;
  letter-spacing: -0.25px;
  line-height: 1.5rem;
  background-color: transparent;
  box-sizing: border-box;
  color: #777777;
  cursor: pointer;
  font-weight: normal;
  min-height: 40px;
  padding-left: 12px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-right: 24px;
  border-radius: 8px;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-1:hover {
  color: #535353;
  background-color: #e6f4ff;
}

.emotion-1:focus {
  outline: none;
  color: #ffffff;
  background-color: #0a68c1;
}

.emotion-1:focus svg polygon {
  fill: #ffffff;
}

.emotion-1 a {
  color: #0a0a0a;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: normal;
  width: 100%;
  height: 100%;
}

.emotion-1 a:visited {
  color: #0a0a0a;
}

.emotion-0 {
  fill: #535353;
  color: #535353;
  width: 16px;
  height: 16px;
  float: right;
}

<nav
    aria-label="Sidebar"
    class="emotion-7"
    role="navigation"
  >
    <ul
      class="emotion-6"
      role="list"
    >
      <li
        class="emotion-2"
      >
        <div
          class="emotion-1"
          data-testid="/group1"
          tabindex="0"
        >
          Group 1
          <svg
            aria-labelledby="mock-bui-1"
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title
              id="mock-bui-1"
            >
              close icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 10 12 15 17 10"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 10 12 15 17 10"
              />
            </g>
          </svg>
        </div>
      </li>
      <li
        class="emotion-2"
      >
        <div
          class="emotion-1"
          data-testid="/group2"
          tabindex="0"
        >
          Group 2
          <svg
            aria-labelledby="mock-bui-1"
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title
              id="mock-bui-1"
            >
              close icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 10 12 15 17 10"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 10 12 15 17 10"
              />
            </g>
          </svg>
        </div>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;
